--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
     - run: |
         echo $JAVA_HOME
         mvn -version
-    - uses: actions/setup-java@v3
+    - uses: actions/setup-java@main
       with:
         java-version: 19.0.1
         distribution: jdkfile
